# openas

./: .gitignore  CMakeLists.txt  README.md
src/: as.h  autm.cpp  autm.h  neighbor.h  pos.h  vivs.h
src/test/: copit.h  test.cpp
